--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,1 +1,14 @@
 
+FROM node:14-alpine
+
+WORKDIR /app
+
+EXPOSE 3000
+
+ADD node_modules.tar.gz .
+
+COPY . .
+
+ENTRYPOINT [ "npm" ]
+
+CMD [ "start" ]
