--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,1 +1,12 @@
 
+FROM mjgargani/puppeteer:trybe1.0
+
+WORKDIR /app
+
+ADD node_modules.tar.gz .
+
+COPY . .
+
+ENTRYPOINT [ "npm" ]
+
+CMD [ "test" ]
