created docker compose

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,25 @@
 version: '3'
 services:
-  app_A:
-    # ...
-    # parâmetros
-    # ...
-  app_B:
-    # ...
-    # parâmetros
-    # ...
+  todotests:
+    depends_on:
+      - frontend
+      - backend
+    environment:
+      - FRONT_HOST=frontend
+  todofront:
+    image: todofrontend
+    ports:
+      -3000:3000
+    depends_on:
+      - backend
+    environment:
+      - REACT_APP_API_HOST=backend
+  todoback:
+    image: todofrontend
+    ports:
+      - 3001:3001
+    depends_on:
+      - backend
+    environment:
+      - REACT_APP_API_HOST=backend
   # ...
